--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <title>Spotify-Your favourite music</title>
 </head>
+<link rel="stylesheet" href="./style.css">
+<!-- bootstrap css -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<body>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
+<body class="bg-secondary">
+    <nav class="navbar navbar-light bg-dark">
+        <div class="container-fluid d-flex align-items-center justify-content-start">
             <a class="navbar-brand" href="#">
-                <img src="./logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="./logo.png" alt="spotify" width="45" class="d-inline-block align-text-top"> </a>
+            <div>
+                <span class="fs-2 fw-bold me-3">Spotify</span>
                 <span>Home</span>
                 <span>About</span>
-            </a>
+            </div>
         </div>
     </nav>
 
