--- a/index.html
+++ b/index.html
@@ -13,24 +13,228 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 <body class="bg-secondary">
+    <!-- nav area  -->
     <nav class="navbar navbar-light bg-dark">
         <div class="container-fluid d-flex align-items-center justify-content-start">
             <a class="navbar-brand" href="#">
                 <img src="./logo.png" alt="spotify" width="45" class="d-inline-block align-text-top"> </a>
-            <div>
+            <div class="fw-bold">
                 <span class="fs-2 fw-bold me-3">Spotify</span>
-                <span>Home</span>
+                <span class="me-2">Home</span>
                 <span>About</span>
             </div>
         </div>
     </nav>
+
+    <!-- main area  -->
+    <main class="container main-area bg-success d-flex">
+
+        <div class="song-container d-flex rounded ">
+            <div class="song">
+                <h1 class="fw-bold text-center m-3">Best Of Songs</h1>
+                <!-- song list  -->
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/1.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/2.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/3.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/4.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/5.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/6.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/7.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/8.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/9.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
+                    <!-- song img  -->
+                    <div class="song-img">
+                        <img src="./covers/10.jpg" class="img-fluid rounded-circle" alt="...">
+                    </div>
+                    <div class="song-title d-flex align-items-center justify-content-around">
+                        <div>
+                            <span class="text-dark fw-bold">love song</span>
+                        </div>
+                        <div>
+                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
+                                    class="fa-solid fa-play text-dark"></i></span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="song-info">
+
+            </div>
+        </div>
+
+
+
+
+
+    </main>
+
+    <!-- footer area  -->
+    <footer class="bg-dark d-flex align-items-center flex-column">
+        <input class="w-80" type="range" name="range" id="myProgressBar" min="0" max="100">
+        <!-- font awesome icons -->
+        <div class="d-flex align-items-center">
+            <div class="icon d-flex align-items-center">
+                <i class="fa-solid  fa-2x fa-backward-step me-3"></i>
+                <i class="fa-solid fa-3x fa-play"></i>
+                <i class="fa-solid fa-2x fa-forward-step ms-3"></i>
+            </div>
+            <div class="playInfo ms-5">
+                <img src="./playing.gif" alt="">
+                <span>Love song</span>
+            </div>
+        </div>
+    </footer>
+
+
 
 
     <!-- bootstrap script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- my script  -->
     <script src="./app.js"></script>
 </body>
