--- a/index.html
+++ b/index.html
@@ -201,20 +201,16 @@
             </div>
         </div>
 
-
-
-
-
     </main>
 
     <!-- footer area  -->
     <footer class="bg-dark d-flex align-items-center flex-column">
-        <input class="w-80" type="range" name="range" id="myProgressBar" min="0" max="100">
+        <input class="w-80" type="range" name="range" id="myProgressBar" min="0" max="100" value="0">
         <!-- font awesome icons -->
         <div class="d-flex align-items-center">
             <div class="icon d-flex align-items-center">
                 <i class="fa-solid  fa-2x fa-backward-step me-3"></i>
-                <i class="fa-solid fa-3x fa-play"></i>
+                <i class="fa-solid fa-3x fa-play-circle" id="master-play"></i>
                 <i class="fa-solid fa-2x fa-forward-step ms-3"></i>
             </div>
             <div class="playInfo ms-5">
