--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                 <i class="fa-solid fa-2x fa-forward-step ms-3"></i>
             </div>
             <div class="playInfo ms-5">
-                <img src="./playing.gif" alt="">
-                <span>Love song</span>
+                <img id="gif" src="./playing.gif" alt="">
+                <span>Let Me Love You</span>
             </div>
         </div>
     </footer>
