--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <!-- <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i id="0"
+                                    class="songItemPlay fa-solid  fa-play text-dark"></i></span> -->
+
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="0"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
+
                         </div>
                     </div>
                 </div>
@@ -52,15 +56,15 @@
                 <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
                     <!-- song img  -->
                     <div class="song-img">
-                        <img src="./covers/2.jpg" class="img-fluid rounded-circle" alt="...">
+                        <img src="./covers/1.jpg" class="img-fluid rounded-circle" alt="...">
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="1"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -68,15 +72,15 @@
                 <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
                     <!-- song img  -->
                     <div class="song-img">
-                        <img src="./covers/3.jpg" class="img-fluid rounded-circle" alt="...">
+                        <img src="./covers/1.jpg" class="img-fluid rounded-circle" alt="...">
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName  text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="2"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -84,15 +88,15 @@
                 <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
                     <!-- song img  -->
                     <div class="song-img">
-                        <img src="./covers/4.jpg" class="img-fluid rounded-circle" alt="...">
+                        <img src="./covers/1.jpg" class="img-fluid rounded-circle" alt="...">
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="3"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -100,15 +104,15 @@
                 <div class="song-list d-flex bg-white justify-content-between align-items-center rounded-pill">
                     <!-- song img  -->
                     <div class="song-img">
-                        <img src="./covers/5.jpg" class="img-fluid rounded-circle" alt="...">
+                        <img src="./covers/1.jpg" class="img-fluid rounded-circle" alt="...">
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="4"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -120,11 +124,11 @@
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="5"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -135,12 +139,12 @@
                         <img src="./covers/7.jpg" class="img-fluid rounded-circle" alt="...">
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
-                        <div>
-                            <span class="text-dark fw-bold">love song</span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
                         <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="6"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -152,11 +156,11 @@
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="7"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -168,11 +172,11 @@
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="8"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
@@ -184,23 +188,18 @@
                     </div>
                     <div class="song-title d-flex align-items-center justify-content-around">
                         <div>
-                            <span class="text-dark fw-bold">love song</span>
+                            <span class=" songName text-dark fw-bold">love song</span>
                         </div>
-                        <div>
-                            <span> <span class="text-dark fw-bold">5:35</span> &nbsp; <i
-                                    class="fa-solid fa-play text-dark"></i></span>
+                        <div class="d-flex align-items-center justify-content-around">
+                            <span class="songlistplay"><span class="timestamp text-dark fw-bold"><i id="9"
+                                        class="far fa-2x text-dark songItemPlay fa-play-circle"></i> </span></span>
                         </div>
                     </div>
                 </div>
-
-
             </div>
-
             <div class="song-info">
-
             </div>
         </div>
-
     </main>
 
     <!-- footer area  -->
@@ -209,13 +208,13 @@
         <!-- font awesome icons -->
         <div class="d-flex align-items-center">
             <div class="icon d-flex align-items-center">
-                <i class="fa-solid  fa-2x fa-backward-step me-3"></i>
-                <i class="fa-solid fa-3x fa-play-circle" id="master-play"></i>
-                <i class="fa-solid fa-2x fa-forward-step ms-3"></i>
+                <i class=" fa-solid   fa-2x fa-backward-step me-3" id="previous"></i>
+                <i class=" fa-solid  fa-3x fa-play-circle" id="master-play"></i>
+                <i class=" fa-solid  fa-2x fa-forward-step ms-3" id="next"></i>
             </div>
             <div class="playInfo ms-5">
                 <img id="gif" src="./playing.gif" alt="">
-                <span>Let Me Love You</span>
+                <span id="masterSongName">Let Me Love You</span>
             </div>
         </div>
     </footer>
